további szépítgetések, navbar

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+.st {
+    background-color: lightgray;
+}
+h2 {
+    padding-top: 50px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+h3 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+p {
+    text-align: justify;
+}
